--- a/wrangler.toml
+++ b/wrangler.toml
@@ -3,7 +3,7 @@ main = "workers/src/index.ts"
 compatibility_date = "2025-12-14"
 
 [assets]
-assets = { directory = "./dist", binding = "ASSETS" }
+assets = { directory = "./dist" }
 
 # KV 命名空间绑定
 kv_namespaces = [
