--- a/wrangler.toml
+++ b/wrangler.toml
@@ -3,11 +3,12 @@ main = "workers/src/index.ts"
 compatibility_date = "2025-12-14"
 
 [assets]
-directory = "./dist"
+assets = { directory = "./dist", binding = "ASSETS" }
 
-# KV 命名空间绑定：请在 Cloudflare Dashboard 中手动添加
-# Workers/Pages -> Settings -> Bindings -> Add -> KV Namespace
-# Variable name: ANNOUNCEMENTS_KV
+# KV 命名空间绑定
+kv_namespaces = [
+  { binding = "ANNOUNCEMENTS_KV", id = "046dd49c326e4aada1122713ed9e08fe" }
+]
 
 # [vars]
 # 敏感变量请在 Cloudflare Dashboard 中设置：
@@ -16,6 +17,11 @@ directory = "./dist"
 #
 # 本地开发：创建 .dev.vars 文件（已在 .gitignore 中）
 # INIT_TOKEN=your_local_token
+
+# [router]
+routes = [
+  { pattern = "duckov.guducat.cc/*", zone_name = "guducat.cc" },
+]
 
 [observability]
 enabled = false
