:sparkles: 实现 API key 管理与自动化推送功能
- 新增 API key 的创建、列表查看与撤销功能
- 支持 editor 角色用户管理个人 API key
- 实现基于 API key 的自动化公告推送接口
- 添加 Mock 模式下 API key 功能的完整模拟
- 更新权限控制逻辑以支持细粒度的 Mod 访问限制
- 优化系统初始化检测逻辑，通过探测 /api/mod/list 状态判断
- 完善 .env.example 配置说明，增加 VITE_MOCK_SEED_USERS 选项
- 调整 AdminTools 组件结构，区分 super 和 editor 用户界面
- 移除 ApiDebugModal 中的旧版 Token 显示逻辑
- 更新相关类型定义和常量配置

--- a/.env.example
+++ b/.env.example
@@ -11,15 +11,22 @@
 # true = 使用本地 Mock 数据，false = 连接真实的 Cloudflare Workers API
 VITE_USE_MOCK_API=true
 
+# Mock 模式是否预置演示用户（默认关闭，保持与“空 KV 需初始化”一致）
+# - true：自动创建演示账号（admin/password、editor/password），不会弹出“系统初始化”
+# - false：初始为空，需要走“系统初始化”创建超级管理员
+VITE_MOCK_SEED_USERS=false
+
 # Workers API 基础 URL（当 VITE_USE_MOCK_API=false 时生效）
 # 本地开发：http://127.0.0.1:8787
 # 生产环境：https://your-worker.your-subdomain.workers.dev
+# 一体部署（前端也由 Worker 托管）时可留空，默认走相对路径 /api/...
 # VITE_API_BASE_URL=http://127.0.0.1:8787
 
 # --------------------------------------------
-# Cloudflare Workers 初始化令牌（仅后端使用）
+# Cloudflare Workers 初始化令牌（后端使用）
 # --------------------------------------------
 # 用于首次初始化系统时调用 /api/system/init 创建超级管理员账号
 # 强烈建议：使用复杂的随机字符串，不要使用简单密码
 # 生成方法：openssl rand -base64 32
+# 注意：Worker 本地调试不会读取 .env.local，请在项目根目录创建 .dev.vars：
 # INIT_TOKEN=CHANGE_ME_TO_A_SECURE_RANDOM_STRING
