--- a/package.json
+++ b/package.json
@@ -11,15 +11,25 @@
     "worker:deploy": "wrangler deploy"
   },
   "dependencies": {
-    "lucide-react": "0.469.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.6",
+    "@mui/material": "^7.3.6",
+    "@tiptap/extension-link": "^3.13.0",
+    "@tiptap/extension-underline": "^3.13.0",
+    "@tiptap/pm": "^3.13.0",
+    "@tiptap/react": "^3.13.0",
+    "@tiptap/starter-kit": "^3.13.0",
+    "mui-tiptap": "^1.28.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-quill": "2.0.0",
     "simple-icons": "^16.2.0"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "latest",
     "@types/node": "^22.14.0",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.0.0",
     "typescript": "~5.8.2",
     "vite": "^6.2.0",
