:art: 代码质量优化 - 修复56个IDE/TS问题
- 新增typecheck脚本，Worker严格类型检查通过
- 统一短导入路径，删除未使用导出（YAGNI）
- 抽取重复逻辑（DRY），简化条件判断（KISS）
- 补齐异步调用异常处理，修复隐式any类型
- 统一换行符为LF，净减少13行代码

涉及22个文件，遵循KISS/YAGNI/DRY/SOLID原则

--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
+    "typecheck": "tsc --noEmit",
+    "typecheck:worker": "tsc -p workers/tsconfig.json --noEmit",
+    "check": "npm run -s typecheck && npm run -s typecheck:worker && npm run -s build",
     "worker:dev": "node scripts/prepare-dev-vars.mjs && wrangler dev --port 8787",
     "worker:deploy": "wrangler deploy"
   },
