:white_check_mark: 集成 Codecov 测试覆盖率报告和测试基础设施
- 添加 Codecov 配置文件，设置覆盖率状态为 informational
- 集成 @codecov/vite-plugin 进行 bundle 分析
- 更新 CI 工作流：添加测试结果和覆盖率上传步骤
- 配置 vitest 在 CI 环境输出 JUnit 格式报告
- 新增测试文件：apiService.test.ts, mockDb.test.ts, index.test.ts
- 优化覆盖率收集配置，排除测试文件和配置文件
- 更新 .gitignore 忽略 junit.xml 测试报告文件

--- a/.codecov.yml
+++ b/.codecov.yml
@@ -6,3 +6,11 @@ ignore:
   - "coverage/**"
   - "**/*.config.*"
 
+coverage:
+  status:
+    project:
+      default:
+        informational: true
+    patch:
+      default:
+        informational: true
